23 k8s/p3/15-deployment.yml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecom-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecom-backend
  template:
    metadata:
      labels:
        app: ecom-backend
    spec:
      containers:
      - name: ecom-backend
        image: 100xdevs/env-backend
        ports:
        - containerPort: 3000
        volumeMounts: #  # this values you get form 2nd tyeps of secrates // see image 18
        - name: config-volume
          mountPath: /etc/config
          readOnly: true
      volumes:   # create a voume which pick all the configration from this config map which we created above ecom-backend-config 
      - name: config-volume
        configMap:
          name: ecom-backend-config
