23 k8s/p3/18-deployment.yml
apiVersion: v1
kind: Pod
metadata:
  name: secret-dotfiles-pod
spec:
  containers:
    - name: dotfile-test-container
      image: nginx
      ports:
      - containerPort: 80
      volumeMounts: #2 now it is depends on your container that do i want to mount this spcifc env-file or secific folder on this container
        - name: env-file
          readOnly: true
          mountPath: "/etc/secret-volume" # in our case it is not this directory in our app root directory is app check your docker image work or root directory which is app, do not write only /app you have to write /app/.env other wise it will replace the entire app folder // and to check it by going inside the pod new COMMAND - kubectl exec -i <pod-name> /bin/bash and if here you look inside app folder then you have /env folder and in side that you have .env file you sill there is probelm so i [...]
    volumes: #1 the deplyment i am starting it has buch of volumes we just one for e.g, so event before pod is created we tell the deplyment that you have access to all these bellow volumes, so it is name is env-file, and it is comes from secrate who's name is dotfile-secrate, so this volume comes from secrate as file, can i put something else here if you hard nfs - network file storeage, elastic block storages buch of places where you can persist data and put it here, so here i am telling secra [...]
      - name: env-file
        secret:
          secretName: dotfile-secret
